# markdown_visualizer

./: .gitignore  CMakeLists.txt  Makefile  README.md  dev.sh  example_generated_tree.txt  example_parser_output.txt  main.c  massif.out.506828  test.md
.cache/clangd/index/: clay.h.E2D36D780AA36C1E.idx  clay_renderer_raylib.c.7181F8186B6F07E8.idx  main.c.574189C67BB66301.idx  md4c.c.9B8940D6EE9EB3FA.idx  md4c.h.279243BFD8BE0A09.idx  parser.c.05EBD6D780F96F49.idx  parser.h.4791823AE906032F.idx  raylib.h.0D73551E80544929.idx  raymath.h.C9C01DCC4E072F2C.idx
include/clay/: clay.h  clay_renderer_raylib.c  raylib.h  raymath.h
include/md4c/: md4c.c  md4c.h
src/: main.c  parser.c  parser.h  render.c  render.h
